# pharmacy-agentic-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main_streamlit.py  main_streamlit_fixed.py  simple_api.py  simple_app.py  simple_working_app.py  state.py
app/agents/: __init__.py  coverage_agent.py  decision_agent.py  drug_agent.py  intake_agent.py  risk_agent.py  safety_agent.py
app/chains/: drug_chain.py
app/evaluation/: ragas_eval.py
app/graph/: nodes.py  workflow.py
app/tools/: retrieval_tool.py
data/cases/: sample_case.json
data/database/: coverage_rules.json  drugs.json  safety_data.json
scripts/: build_index.py  create_sample_data.py  simple_build_index.py
